further styling. solved the mystery of the annoying scrollbar

--- a/src/components/SlideShow.module.css
+++ b/src/components/SlideShow.module.css
@@ -1,35 +1,41 @@
 .slides-container {
-  margin: 5% auto;
+  margin: 2rem auto 5rem;
   max-width: 960px;
   display: flex;
   overflow: auto;
   border-radius: 5px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 15px 30px 60px hwb(0 0% 100%);
 }
 
 .picture-frame {
   max-width: 640px;
   padding: 4%;
-  background: #EEE;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
   display: flex;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(
+    to bottom right,
+    rgba(126, 120, 123, 0.8),
+    rgba(6, 6, 6, 0.8)
+  );
 }
 
 .slideshow {
-  /* object-fit: contain; */
   max-width: inherit;
   cursor: pointer;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 20px 40px 80px hwb(0 0% 100%);
 }
 
 .article {
   padding: 2rem 1rem;
   font-size: 0.8rem;
   text-align: center;
-  background: hsla(0, 0%, 0%, 0.495);
-  color: #EEE;
+  color: #343030;
+  background: linear-gradient(
+    to bottom right,
+    rgba(255, 255, 255, 0.7),
+    rgba(141, 138, 138, 0.7),
+    rgba(169, 169, 169, 0.7)
+  );
 }
