--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,14 @@ main {
 
 /* hidethescrollbar */
 ::-webkit-scrollbar {
-  width: 0px; /* Width of the scrollbar */
+  width: 0px;
+  height: 0px;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent; /* Hide the track */
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: transparent; /* Hide the thumb */
+  background: transparent;
 }
